--- a/src/output.css
+++ b/src/output.css
@@ -574,14 +574,9 @@ video {
   display: flex;
 }
 
-.size-12 {
-  width: 3rem;
-  height: 3rem;
-}
-
-.size-24 {
-  width: 6rem;
-  height: 6rem;
+.size-16 {
+  width: 4rem;
+  height: 4rem;
 }
 
 .size-1 {
@@ -589,9 +584,58 @@ video {
   height: 0.25rem;
 }
 
-.size-16 {
-  width: 4rem;
-  height: 4rem;
+.size-14 {
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+.size-full {
+  width: 100%;
+  height: 100%;
+}
+
+.size-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.size-auto {
+  width: auto;
+  height: auto;
+}
+
+.size-1\/3 {
+  width: 33.333333%;
+  height: 33.333333%;
+}
+
+.size-12 {
+  width: 3rem;
+  height: 3rem;
+}
+
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-8 {
+  width: 2rem;
+  height: 2rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-1\/3 {
+  height: 33.333333%;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .min-h-screen {
@@ -602,6 +646,47 @@ video {
   width: 100%;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -610,12 +695,77 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-r-lg {
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+
+.rounded-l-lg {
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-4 {
+  border-width: 4px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
+}
+
+.border-r-2 {
+  border-right-width: 2px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-l-2 {
+  border-left-width: 2px;
+}
+
+.border-primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 94 158 / var(--tw-border-opacity, 1));
+}
+
+.border-secondary {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 64 158 / var(--tw-border-opacity, 1));
 }
 
 .bg-white {
@@ -644,12 +794,163 @@ video {
   padding-right: 1rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(36 94 158 / var(--tw-text-opacity, 1));
+}
+
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(36 64 158 / var(--tw-text-opacity, 1));
+}
+
+.placeholder-primary::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(36 94 158 / var(--tw-placeholder-opacity, 1));
+}
+
+.placeholder-primary::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(36 94 158 / var(--tw-placeholder-opacity, 1));
 }
 
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus-within\:border-secondary:focus-within {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 64 158 / var(--tw-border-opacity, 1));
+}
+
+.focus\:border:focus {
+  border-width: 1px;
+}
+
+.focus\:border-b:focus {
+  border-bottom-width: 1px;
+}
+
+.focus\:border-b-4:focus {
+  border-bottom-width: 4px;
+}
+
+.focus\:border-t-4:focus {
+  border-top-width: 4px;
+}
+
+.focus\:border-l-4:focus {
+  border-left-width: 4px;
+}
+
+.focus\:border-secondary:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 64 158 / var(--tw-border-opacity, 1));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.active\:border-secondary:active {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 64 158 / var(--tw-border-opacity, 1));
+}
+
+.group:focus .group-focus\:border-secondary {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 64 158 / var(--tw-border-opacity, 1));
+}
+
+.group:focus .group-focus\:fill-secondary {
+  fill: #24409E;
+}
+
+.group:active .group-active\:border-secondary {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 64 158 / var(--tw-border-opacity, 1));
+}
+
+.group:active .group-active\:fill-secondary {
+  fill: #24409E;
+}
+
+.peer:focus ~ .peer-focus\:border {
+  border-width: 1px;
+}
+
+.peer:focus ~ .peer-focus\:border-4 {
+  border-width: 4px;
+}
+
+.peer:focus ~ .peer-focus\:border-b-4 {
+  border-bottom-width: 4px;
+}
+
+.peer:focus ~ .peer-focus\:border-r-4 {
+  border-right-width: 4px;
+}
+
+.peer:focus ~ .peer-focus\:border-t-4 {
+  border-top-width: 4px;
+}
+
+.peer:focus ~ .peer-focus\:border-b {
+  border-bottom-width: 1px;
+}
+
+.peer:focus ~ .peer-focus\:border-secondary {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 64 158 / var(--tw-border-opacity, 1));
 }
